--- a/index.html
+++ b/index.html
@@ -10,8 +10,13 @@
 <meta name="apple-mobile-web-app-title" content="Barcode Scanner">
 
 <style>
-  body, html {margin:0; padding:0; height:100%; font-family:sans-serif; background:black;}
-  #reader {width:100%; height:100vh; display:flex; align-items:center; justify-content:center; background:black;}
+  body, html { 
+    margin:0; padding:0; height:100%; background:black; font-family:sans-serif; color:white; 
+    display:flex; flex-direction:column; justify-content:space-between; align-items:center;
+  }
+
+  /* Scanner en groene scherm */
+  #reader { display:none; width:100%; height:100vh; }
   #greenScreen {
     display:none;
     position:absolute; inset:0;
@@ -19,28 +24,33 @@
     color:white;
     font-size:2em;
     display:flex;
-    flex-direction: column;
+    flex-direction:column;
     align-items:center;
     justify-content:center;
-    z-index: 20;
+    z-index:20;
   }
+
+  /* Knoppen */
   button {
-    padding: 12px 24px;
-    font-size: 1em;
-    margin-top: 20px;
-    border:none;
-    border-radius: 5px;
-    background:white;
-    color:black;
-    z-index: 10;
-    cursor:pointer;
+    border:none; border-radius:10px; cursor:pointer;
+    font-weight:bold; box-shadow:0 2px 5px rgba(0,0,0,0.3);
   }
+
   #startBtn {
-    position:absolute;
-    top:50%;
-    left:50%;
-    transform:translate(-50%, -50%);
-    z-index: 10;
+    padding:18px 40px; font-size:1.3em; background:white; color:black;
+    margin-bottom:40px;
+    z-index:10;
+  }
+
+  #resetBtn {
+    padding:12px 30px; font-size:1.1em; background:white; color:black;
+    margin-top:30px;
+    z-index:10;
+  }
+
+  #backBtn {
+    padding:18px 40px; font-size:1.2em; background:white; color:black;
+    margin-top:30px;
   }
 </style>
 
@@ -48,13 +58,19 @@
 </head>
 <body>
 
+<!-- Reset knop bovenaan -->
+<button id="resetBtn">Reset Scanner</button>
+
+<!-- Scanner viewer -->
 <div id="reader"></div>
 
+<!-- Groen scherm na scan -->
 <div id="greenScreen">
   SCAN OK ✅
-  <button id="resetBtn">Reset Scanner</button>
+  <button id="backBtn">Terug naar beginscherm</button>
 </div>
 
+<!-- Start knop onderaan -->
 <button id="startBtn">Start Scanner</button>
 
 <script>
@@ -62,6 +78,7 @@ const readerElem = document.getElementById('reader');
 const green = document.getElementById('greenScreen');
 const startBtn = document.getElementById('startBtn');
 const resetBtn = document.getElementById('resetBtn');
+const backBtn = document.getElementById('backBtn');
 
 const qrScanner = new Html5Qrcode("reader");
 
@@ -100,15 +117,25 @@ function startScanner() {
   });
 }
 
+// Start scanner knop
 startBtn.addEventListener('click', () => {
   startBtn.style.display = "none";
   startScanner();
 });
 
+// Reset knop bovenaan
 resetBtn.addEventListener('click', () => {
-  startScanner();
+  startBtn.style.display = "block";
+  green.style.display = "none";
+  readerElem.style.display = "none";
+  qrScanner.stop().catch(()=>{});
+});
+
+// Terug naar beginscherm knop op groen scherm
+backBtn.addEventListener('click', () => {
+  green.style.display = "none";
+  startBtn.style.display = "block";
 });
 </script>
-
 </body>
 </html>
